# my-pages

./: index.html  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
app/: main.py
backend/: main.py
frontend/templates/: index.html
static/scripts/: main.js
