[tool.poetry]
name = "my-pages"
version = "0.1.0"
description = ""
authors = ["Jan Jelínek <jan114@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
